--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
           </p>
         </div>
         <div class="card-stats">
-          <div class="stat-block">
+          <div class="stats-block">
             <div class="stats-numbers">10k+</div>
             <div class="stats-heading">companies</div>
           </div>
-          <div class="stat-block">
+          <div class="stats-block">
             <div class="stats-numbers">314</div>
             <div class="stats-heading">templates</div>
           </div>
-          <div class="stat-block">
+          <div class="stats-block">
             <div class="stats-numbers">12m+</div>
             <div class="stats-heading">queries</div>
           </div> 
